<resources>
    <string name="app_name">Uctenky</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Učtenky</string>
    <string name="login_title">Přihlášení</string>
    <string name="username">Email</string>
    <string name="password">Heslo</string>
    <string name="login_btn">Přihlásit se</string>
    <string name="register_btn">Zaregistrovat se</string>
    <string name="document_name">Název dokumentu</string>
    <string name="date_input">Date (YYYY-MM-DD)</string>
    <string name="capture_image">Capture Image</string>
    <string name="registr_btn_intro">Registrovat se</string>
    <string name="login_btn_intro">Přihlásit se</string>
    <string name="add_document_title">Přidejte svou učtenku!</string>
    <string name="document_foto_btn">Nahrej účtenku</string>
    <string name="product_foto_btn">Nahrej produkt</string>
    <string name="create_btn">Vytvořit</string>
    <string name="back_btn">Zpět</string>
</resources>